# oxideav-midi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: synth_render.rs
fuzz/: Cargo.toml
fuzz/corpus/dls/: empty_bank.dls
fuzz/corpus/sf2/: min_sfbk.sf2
fuzz/corpus/sfz/: comments_and_define.sfz  global_group_region.sfz  minimal.sfz
fuzz/corpus/smf/: meta_two_tracks.mid  note_on_off.mid
fuzz/fuzz_targets/: dls.rs  sf2.rs  sfz.rs  smf.rs
src/: downloader.rs  lib.rs  mixer.rs  paths.rs  scheduler.rs  smf.rs  tuning.rs
src/instruments/: articulation.rs  dls.rs  mod.rs  sample_voice.rs  sf2.rs  sfz.rs  tone.rs  wav_pcm.rs
src/ump/: message.rs  message_midi2.rs  mod.rs  packet.rs  scaling.rs  translate.rs
tests/: dls_articulation.rs  mpe_and_master_tuning.rs  sfz_sf2_dls_smoke.rs  sfz_sf2_smoke.rs  ump_stream.rs  voice_round_trip.rs
